Training docs/Assignment8/Trial/src/objects/Media__c.object
<CustomObject>
	<description>It is list of Media which is available.</description>
	<fields>
		<fullName>Description__c</fullName>
		<description>Displays the information of the music.</description>
		<inlineHelpText>It gives the information of the music</inlineHelpText>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Price__c</fullName>
		<description>Amount for the single product</description>
		<inlineHelpText>It shows the price of the single product.</inlineHelpText>
		<label>Price</label>
		<precision>18</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_Quantity__c</fullName>
		<description>Contains total no of quantity.</description>
		<inlineHelpText>It shows the total quantity of the stocks</inlineHelpText>
		<label>Total Quantity</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Media</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Inventory</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Medias</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>